--- a/service-2-modal.html
+++ b/service-2-modal.html
@@ -1,37 +1,27 @@
 <div class="modal-body">
-
    <div class="row">
       <div class="col-md-12">
          <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-
          <h2 class="modal-title">PROGRAMA DE VACUNACIÒN</h2>
-
          <p class="large-text">
             Cachorros: Comienza a los 45 dìas con la vacuna contra parvovirus y moquillo. Se continua con refuerzos cada
             21dìas entre vacunas con dos dosis de quintuple y dos de sextuple , y se termina el plan con la vacuna
             antirrabica.
-
+            <br/>
             Perros adultos : Anualmente debemos revacunar con una dosis de vacuna sextuple y antirrabica y leptospirosis
             cada 6 meses en animales hasta 3 años de vida y luego a partir de los 3 años anual (esta incluida con la
             vacuna sextuple)
-
+            <br/>
             Gatos: Los planes de vacunas se realizan bajo normas internacionales para las enfermedades más importantes
-            que los pueden afectar. La vacunación comienza a los dos meses con la triple felina y leucemia, previo test
-            serologico para descartar leucemia y el virus de la inmunodeficiencia felino; y luego se realizarán
-            refuerzos en intervalos de cada 15 días a 30 días.
+            que los pueden afectar. La vacunación comienza a los dos meses con la triple felina y leucemia (primera exposicion, previo test serologico),
+            para descartar leucemia y el virus de la inmunodeficiencia felino; y luego se realizarán
+            refuerzos en intervalos de cada 15 días a 30 días, luego se evaluará si se sigue aplicando el resto de la vida del gato.
             Se concluye con la vacuna antirrábica.
-
-            Es importante destacar que la vacuna de Leucemia Felina DEBE ser aplicada desde los 2 meses de edad y luego
-            se evaluará si se sigue aplicando el resto de la vida del gato. La vacunación es obligatoria, aunque el gato
-            no salga de casa e incluso si el gatito es añoso, ya que su sistema inmune las necesitará.
+            <br/>
+            La vacunación antirrabica es obligatoria, aunque el gato o perro no salga de casa e incluso si son añosos.
             En gatos de riesgo (salida al exterior) se recomienda la primera exposición y refuerzos anuales y en gatos
             indoor (de interior) se recomienda una primera exposicion y su refuerzo solamente
          </p>
-
       </div>
-      <!--col-md-12-->
    </div>
-   <!--row-->
-
 </div>
-<!--modal body-->
