--- a/service-3-modal.html
+++ b/service-3-modal.html
@@ -1,34 +1,31 @@
 <div class="modal-body">
-
    <div class="row">
       <div class="col-md-12">
          <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-
          <h2 class="modal-title">NUTRICIÒN</h2>
-
          <p class="large-text">
+            <strong>La alimentcion en nuestras mascotas puede ser balanceada o casera de acuerdo a la eleccion del tutor y el criterio veterinario. </strong>
+            <br/>
             Recordemos que los felinos son 100% carnívoros estrictos. Siempre indicaremos alimentos de acuerdo a la
             etapa de su vida, más allá de que quizás en algún momento se requiera una dieta medicada por alguna
             enfermedad.
-
+            <br/>
             Es importante que el gatito en sus primeras etapas de la vida pueda probar distintos ingredientes caseros
             proteicos como las carnes y pescados que siempre estarán indicados bajo supervisión médica.
-
+            <br/>
             En caso de querer realizar una dieta casera, debe estar supervisada por un medico especialista en nutricion
             con los controles requeridos y adaptada a cada animal.
-
+            <br/>
             En caninos, que son omnivoros, podemos elegir tambien entre una dieta balanceada o una dieta casera, pero
             siempre supervisada por un veterinario especialista.
             Existen alimentos que no podemos suministar a nuestras mascotas.
             Por ejemplo cosas dulces, cebolla, uvas, condimentos, alimentos ricos en grasa o huesos de pollo , o de
             carne pequeños.
+            <br/>
             Recomendamos que todas las carnes esten cocidas previo a su suministro.
+            <br/>
+            <strong>Siempre recordemos que la alimentcion debe ser de alta calidad</strong>
          </p>
-
       </div>
-      <!--col-md-12-->
    </div>
-   <!--row-->
-
 </div>
-<!--modal body-->
