--- a/service-4-modal.html
+++ b/service-4-modal.html
@@ -4,12 +4,9 @@
          <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
          <h2 class="modal-title">BIENESTAR Y BELLEZA</h2>
          <p class="large-text">
-            <strong>Higiene:</strong>
+            <strong>Recomendaciones sobre baños en perros, gatos y productos a utilizar para su higiene diaria.</strong>
             <br/>
-            Recomendaciones sobre baños en perros y gatos y productos a utilizar para su higiene diaria.
-            <br/>
-            Gatos: No recomendamos bañar a los gatos. Si bien algunos estan acostumbrados desde los pocos meses de vida les genera una situación de estres y como consecuente baja de defensas.
-            Se pueden utilizar baños en seco y luego un cepillo para extraer el pelo muerto.
+            Gatos: No recomendamos bañar a los gatos. Si el gato esta habituado desde pequeño se puede, pero no es lo aconsejado. Se recomiendan baños en seco y luego un cepillo para extraer el pelo muerto.
             <br/>
             Perros: Hasta que terminen el plan de vacunación no se recomienda bañarlos en petshops o peluquerias caninas. Se pueden hacer baños en casa, utilizando productos como shampoo para cachorros, con la menor frecuencia posible.
             <br/>
@@ -24,8 +21,5 @@
             Nunca bañe a su mascotas con productos para uso humano, solamente aptos para animales o jabon blanco.
          </p>
       </div>
-      <!--col-md-12-->
    </div>
-   <!--row-->
 </div>
-<!--modal body-->
