--- a/service-6-modal.html
+++ b/service-6-modal.html
@@ -1,35 +1,35 @@
 <div class="modal-body">
-
    <div class="row">
       <div class="col-md-12">
          <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-
          <h2 class="modal-title">COMPORTAMIENTO</h2>
-
          <p class="large-text">
+            La palabra etologia deriva de los terminos griegos "ethos" (costumbre) y "logos" (descripcion). y se refiere al estudio del comportamiento animal en su habitat natural
+            <br/>
+            La etologia clinica tiene como objetivo la prevencion, el diagnostico y el tratamiento de los problemas del comportamiento de los animales domesticos. solo realizada por medicos veterinarios,asi como la psiquiatria humana.los problemas de comportamiento matan mas mascotas en argentina que cualquier infeccion por si sola.
+            <br/>
+            Las personas abandonan a sus mascotas, las descuidan o abusan de ellas a causa de tales problemas.es imperioso, con fuente calificada y confiable que el veterinario ayude al tutor a ir en la direccion correcta. esto puede salvar vidas y mejorar relaciones.
+            <br/>
+            Pueden encontrar todas las recomendaciones sobre estos temas en nuestro blog o instagram.
+            <br/>
             Todo animal debe tener ejercicio diario, por ejemplo en un perro mediano se recomienda que debe caminar 2 km
             por día si vive en departamento
-            <br />
+            <br/>
             Su mascota necesita jugar por lo menos 1 vez al día , se pueden utilizar sogas y pelotas , en el caso de
             gatos pueden ser elementos colgantes y rodantes.
-            <br />
+            <br/>
             Se recomienda nunca utilizar las manos durante los juegos porque predispone a conductas agresivas.
-            <br />
+            <br/>
             Sociabilización:
-            <br />
+            <br/>
             Los cachorros deben ser adoptados con un mínimo de 60 días de edad (antes deben estar con la madre)
-            <br />
+            <br/>
             Es super importante sociabilizar al cachorro canino hasta los 4 meses de vida y a los felinos hasta los 3
             meses para lograr un animal de caracter estable
-            <br />
+            <br/>
             También aconsejamos acostumbrarlos a circular en autos, sonidos fuertes, ruidos diarios de ciudad, manipular
             alimento mientras come, revisarle orejas y boca.
          </p>
-
       </div>
-      <!--col-md-12-->
    </div>
-   <!--row-->
-
 </div>
-<!--modal body-->
