--- a/service-1-modal.html
+++ b/service-1-modal.html
@@ -1,23 +1,13 @@
 <div class="modal-body">
-
    <div class="row">
       <div class="col-md-12">
          <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
-
          <h2 class="modal-title">EXAMINACIONES ANUALES</h2>
-
          <p class="large-text">
-            Se realizaran según edad y patologías previas, en animales gerontes recomendamos un chequeo clínico, un
-            análisis de sangre de rutina y un chequeo cardiaco anual.
-            En gatos recomendamos a partir de los 7años, en razas chicas a partir de los 10años y en perros grandes a
-            partir de los 5 años.
+            Se realizaran según edad y patologías previas, en animales gerontes recomendamos un chequeo clínico, un análisis de sangre de rutina y un chequeo cardiaco anual. 
+            <br/>
+            Se considera animal geronte a: gatos a partir de los 7 años, perros de razas chicas a partir de los 10 años y perros grandes a partir de los 5 años (aproximadamente).
          </p>
-         <!--row-->
-
       </div>
-      <!--col-md-12-->
    </div>
-   <!--row-->
-
 </div>
-<!--modal body-->
