Added services - Work in progress

--- a/nosotros.html
+++ b/nosotros.html
@@ -15,10 +15,8 @@
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 
-    <link 
-        href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700%7CDroid+Serif:400,400italic,700,700italic'
-        rel='stylesheet' 
-        type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700%7CDroid+Serif:400,400italic,700,700italic'
+        rel='stylesheet' type='text/css'>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -143,10 +141,6 @@
                         </figure>
                         <span class="user-name">- Veterinaria / Directora Tecnica / Etologa -</span>
                         <h4>Dra. Jessica Singermann</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae corporis nemo,
-                            accusamus earum rerum repudiandae sapiente.
-                        </p>
                     </div>
                 </div>
                 <!-- Miembro -->
@@ -163,10 +157,6 @@
                         </figure>
                         <span class="user-name">- Veterinario / Anestesista -</span>
                         <h4>Dr. Agustin Casablanca</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae corporis nemo,
-                            accusamus earum rerum repudiandae sapiente.
-                        </p>
                     </div>
                 </div>
                 <!-- Miembro -->
@@ -183,10 +173,6 @@
                         </figure>
                         <span class="user-name">- Veterinaria / Clinica -</span>
                         <h4>Dra. Antonia Moraga</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae corporis nemo,
-                            accusamus earum rerum repudiandae sapiente.
-                        </p>
                     </div>
                 </div>
             </div>
@@ -196,7 +182,7 @@
                 <div class="col-md-4">
                     <div class="team-member alignc margin-48b">
                         <figure class="member-img member-img-alt">
-                            <a data-toggle="modal" href="team-member-1-modal.html" data-target="#myModal">
+                            <a data-toggle="modal" href="team-member-4-modal.html" data-target="#myModal">
                                 <div class="member-overlay">
                                     <h5><i class="fa fa-eye"></i></h5>
                                 </div>
@@ -206,17 +192,13 @@
                         </figure>
                         <span class="user-name">- Veterinario / Cirujano / Traumatologo -</span>
                         <h4>Dr. Nicolas Gonzalez</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae corporis nemo,
-                            accusamus earum rerum repudiandae sapiente.
-                        </p>
                     </div>
                 </div>
                 <!-- Miembro -->
                 <div class="col-md-4">
                     <div class="team-member alignc margin-48b">
                         <figure class="member-img member-img-alt">
-                            <a data-toggle="modal" href="team-member-2-modal.html" data-target="#myModal">
+                            <a data-toggle="modal" href="team-member-5-modal.html" data-target="#myModal">
                                 <div class="member-overlay">
                                     <h5><i class="fa fa-eye"></i></h5>
                                 </div>
@@ -226,17 +208,13 @@
                         </figure>
                         <span class="user-name">- Veterinaria / Clinica -</span>
                         <h4>Dra. Jeanette Espil</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae corporis nemo,
-                            accusamus earum rerum repudiandae sapiente.
-                        </p>
                     </div>
                 </div>
                 <!-- Miembro -->
                 <div class="col-md-4">
                     <div class="team-member alignc margin-48b">
                         <figure class="member-img member-img-alt">
-                            <a data-toggle="modal" href="team-member-3-modal.html" data-target="#myModal">
+                            <a data-toggle="modal" href="team-member-6-modal.html" data-target="#myModal">
                                 <div class="member-overlay">
                                     <h5><i class="fa fa-eye"></i></h5>
                                 </div>
@@ -246,10 +224,6 @@
                         </figure>
                         <span class="user-name">- Ecografia -</span>
                         <h4>Dra. Mariana Lopez Merlo</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae corporis nemo,
-                            accusamus earum rerum repudiandae sapiente.
-                        </p>
                     </div>
                 </div>
             </div>
@@ -259,7 +233,7 @@
                 <div class="col-md-4">
                     <div class="team-member alignc margin-48b">
                         <figure class="member-img member-img-alt">
-                            <a data-toggle="modal" href="team-member-1-modal.html" data-target="#myModal">
+                            <a data-toggle="modal" href="team-member-7-modal.html" data-target="#myModal">
                                 <div class="member-overlay">
                                     <h5><i class="fa fa-eye"></i></h5>
                                 </div>
@@ -269,10 +243,6 @@
                         </figure>
                         <span class="user-name">- Veterinaria / Dermatologa -</span>
                         <h4>Dra. Gabriela Gonzalez Escobar</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis molestiae corporis nemo,
-                            accusamus earum rerum repudiandae sapiente.
-                        </p>
                     </div>
                 </div>
 
