--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
         <!-- Services Row -->
         <div class="row">
             <div class="col-md-4">
-                <a href="service-1-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-pets3"></i>
                         <h5>CLINICA MEDICA</h5>
@@ -98,11 +98,11 @@
                             erat a ante venenatis dapibus posuere velit.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="col-md-4">
-                <a href="service-2-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-syringe18"></i>
                         <h5>DERMATOLOGIA</h5>
@@ -111,11 +111,11 @@
                             ante venenatis dapibus posuere velit aliquet.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="col-md-4">
-                <a href="service-3-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-cat44"></i>
                         <h5>ETOLOGIA</h5>
@@ -124,13 +124,13 @@
                             ante venenatis dapibus posuere velit aliquet.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
         <!-- Services Row -->
         <div class="row">
             <div class="col-md-4">
-                <a href="service-4-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-comb12"></i>
                         <h5>CIRUGIA</h5>
@@ -139,11 +139,11 @@
                             erat a ante venenatis dapibus posuere velit.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="col-md-4">
-                <a href="service-5-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-love42"></i>
                         <h5>SERVICIO DE ANESTESIOLOGIA</h5>
@@ -152,11 +152,11 @@
                             ante venenatis dapibus posuere velit aliquet.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="col-md-4">
-                <a href="service-6-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-dog33"></i>
                         <h5>SERVICIO DE ATENCION A DOMICILIO</h5>
@@ -165,13 +165,13 @@
                             ante venenatis dapibus posuere velit aliquet.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
         <!-- Services Row -->
         <div class="row">
             <div class="col-md-4">
-                <a href="service-4-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-comb12"></i>
                         <h5>LABORATORIO</h5>
@@ -180,11 +180,11 @@
                             erat a ante venenatis dapibus posuere velit.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="col-md-4">
-                <a href="service-5-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-love42"></i>
                         <h5>PELUQUERIA</h5>
@@ -193,11 +193,11 @@
                             ante venenatis dapibus posuere velit aliquet.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="col-md-4">
-                <a href="service-6-modal.html" data-toggle="modal" data-target="#myModal">
+                <div>
                     <div class="service">
                         <i class="picons flaticon-dog33"></i>
                         <h5>PET SHOP</h5>
@@ -206,7 +206,7 @@
                             ante venenatis dapibus posuere velit aliquet.
                         </p>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </section>
