--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <section id="services">
         <div class="row">
             <div class="col-md-4">
-                <a href="service-1-modal.html" data-toggle="modal" data-target="#myModal">
+                <a href="planes/plan-sanitario-1.html" data-toggle="modal" data-target="#myModal">
                     <div class="service">
                         <i class="picons flaticon-pets3"></i>
                         <h5>EXAMINACIONES ANUALES</h5>
@@ -232,7 +232,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="service-2-modal.html" data-toggle="modal" data-target="#myModal">
+                <a href="planes/plan-sanitario-2.html" data-toggle="modal" data-target="#myModal">
                     <div class="service">
                         <i class="picons flaticon-syringe18"></i>
                         <h5>PROGRAMA DE VACUNACIÒN</h5>
@@ -244,7 +244,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="service-3-modal.html" data-toggle="modal" data-target="#myModal">
+                <a href="planes/plan-sanitario-3.html" data-toggle="modal" data-target="#myModal">
                     <div class="service">
                         <i class="picons flaticon-cat44"></i>
                         <h5>NUTRICIÒN</h5>
@@ -257,7 +257,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <a href="service-4-modal.html" data-toggle="modal" data-target="#myModal">
+                <a href="planes/plan-sanitario-4.html" data-toggle="modal" data-target="#myModal">
                     <div class="service">
                         <i class="picons flaticon-comb12"></i>
                         <h5>BIENESTAR Y BELLEZA</h5>
@@ -268,7 +268,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="service-5-modal.html" data-toggle="modal" data-target="#myModal">
+                <a href="planes/plan-sanitario-5.html" data-toggle="modal" data-target="#myModal">
                     <div class="service">
                         <i class="picons flaticon-love42"></i>
                         <h5>TRATAMIENTO EN URGENCIAS</h5>
@@ -283,7 +283,7 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="service-6-modal.html" data-toggle="modal" data-target="#myModal">
+                <a href="planes/plan-sanitario-6.html" data-toggle="modal" data-target="#myModal">
                     <div class="service">
                         <i class="picons flaticon-dog33"></i>
                         <h5>COMPORTAMIENTO</h5>
