--- a/team-member-3-modal.html
+++ b/team-member-3-modal.html
@@ -1,65 +1,60 @@
-   <div class="modal-body">
-   
+<div class="modal-body">
+
    <div class="row">
-<div class="col-md-12">
- <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
- 
-<div class="profile">
+      <div class="col-md-12">
+         <div class="exit-modal" data-dismiss="modal"><i class="fa fa-times"></i></div>
 
-<div class="profile-icon">
+         <div class="profile">
 
-<img class="img-responsive" src="images/team/member-3.jpg" alt="">
+            <div class="profile-icon">
+               <img class="img-responsive vet-team-member" src="images/photos/nosotros/antonia.jpg" alt="">
+               <ul class="profile-social alignc">
+                  <li><a href="mailto: jeanette.espil@gmail.com"><i class="fa fa-envelope"></i></a></li>
+               </ul>
+            </div>
 
-<ul class="profile-social alignc">
-<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-<li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-<li><a href="#" target="_blank"><i class="fa fa-envelope"></i></a></li>
-</ul>
+            <div class="profile-text">
 
+               <span class="user-name">- VETERINARIA / CLINICA -</span>
+               <h2 class="modal-title">Dra. Antonia Moraga</h2>
+
+               <div class="row">
+                  <div class="col-lg-6">
+                     <h4 class="small-sub-title">- Bio -</h4>
+                     <ul>
+                        <li><strong>(Período: Noviembre 200 - 2019)</strong></li>
+                        <li>
+                           <p>
+                              Facultad de Ciencias Veterinarias (FCV),
+                              Universidad Nacional de La Plata (UNLP).
+                           </p>
+                        </li>
+                        <li>
+                           <p><strong>Asistencia a Congresos y charlas</strong></p>
+                           <p>
+
+                              Intoxicaciones mas frecuentes en la clínica de mascotas. Catedra de Bioquimica de la FCV
+                              UNLP 2020.
+                              Actualización en gastroenterología clínica. Vatuc.2020
+                              Alimentación fisiológica ancestral en caninos. MV Clara Fontana . En curso
+                              Primer congreso virtual AVA. 2020
+                              XIX Congreso nacional AVEACA 2019
+                              Primer encuentro equino en Don Joaquin 2019
+                              Hemoparasitosis en la clínica diaria. MV:Pablo Borras . 2019
+                           </p>
+                        </li>
+                        <li><strong>EXPERIENCIA LABORAL</strong></li>
+                        <li>
+                           <p>
+                              2019-2021 VETERINARIA INTEGRAL DR FURNO
+                              2020- actualidad, Veterinaria Magadascar
+                           </p>
+                        </li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
-
-<div class="profile-text">
-
-<span class="user-name">Vet Technician</span>
-<h2 class="modal-title">Dr. Anne Doe</h2>
-   
-<p class="large-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer <strong>commodo sapien</strong> felis. Pellentes faucibus <strong>sollicitudin</strong> ante,at porta <strong>felisrutrum</strong> eget.</p>
-
-<div class="row">
-<div class="col-sm-4">
-
-<h4 class="small-sub-title">- Bio -</h4>
-
-<p>Cras eu nibh non dui mattis pretium id vitae erat. Quisque justo nisi, malesuada eget lorem ac, posuere dictum justo. Vestibulum vitae scelerisque ante. Duis at mi vel odio fermentum accumsan at nec massa. Donec id velit porta, mattis lorem vitae, convallis nunc.</p>
-
-</div>
-
-<div class="col-sm-4">
-
-<h4 class="small-sub-title">- Education -</h4>
-
-<p>Cras eu nibh non dui mattis pretium id vitae erat. Quisque justo nisi, malesuada eget lorem ac, posuere dictum justo. Vestibulum vitae scelerisque ante. Duis at mi vel odio fermentum accumsan at nec massa. Donec id velit porta, mattis lorem vitae, convallis nunc.</p>
-
-</div>
-
-<div class="col-sm-4">
-
-<h4 class="small-sub-title">- Skills -</h4>
-
-<p>Cras eu nibh non dui mattis pretium id vitae erat. Quisque justo nisi, malesuada eget lorem ac, posuere dictum justo. Vestibulum vitae scelerisque ante. Duis at mi vel odio fermentum accumsan at nec massa. Donec id velit porta, mattis lorem vitae, convallis nunc.</p>
-
-</div>
-
-</div><!--row-->
-
-
-</div><!-- profile-text -->
-
-</div><!-- profile -->
-   
-</div><!--col-md-12-->
-</div><!--row-->
-	
-</div><!--modal body-->
